--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/.vscode
+/src/firebase/
+
+# firebase
+.firebaserc
+firebase.json
+firestore.rules
+firestore.indexes.json
+
+storage.rules
+yarn.lock
+
+
