--- a/.gitignore
+++ b/.gitignore
@@ -22,16 +22,17 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+#vscode
 /.vscode
-/src/firebase/
 
 # firebase
 .firebaserc
 firebase.json
 firestore.rules
 firestore.indexes.json
-
 storage.rules
+/src/firebase/
+
 yarn.lock
 
 
