--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^7.19.1",
     "history": "^4.10.1",
     "react": "^16.13.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
